--- a/bower.json
+++ b/bower.json
@@ -9,7 +9,8 @@
     "platinum-elements": "PolymerElements/platinum-elements#^1.1.0",
     "polymer": "Polymer/polymer#^1.2.0",
     "paper-menu": "PolymerElements/paper-menu#4fecb43601",
-    "google-map": "GoogleWebComponents/google-map#~1.1.7"
+    "google-map": "GoogleWebComponents/google-map#~1.1.7",
+    "neon-animation": "PolymerElements/neon-animation#~1.0.8"
   },
   "devDependencies": {
     "web-component-tester": "*"
